# gitpulse

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
src/: app.rs  cli.rs  forge.rs  git.rs  main.rs  model.rs
src/ui/: board_view.rs  help.rs  mod.rs  repo_detail.rs
