[package]
name = "gitocular"
version = "1.0.1"
edition = "2024"
authors = ["krfl <2630397+krfl@users.noreply.github.com>"]
license = "Apache-2.0"
description = "A TUI dashboard for monitoring git repository status"
repository = "https://github.com/krfl/gitocular"
rust-version = "1.86"
keywords = ["git", "tui", "dashboard", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gitocular"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
